# builder-ric

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
app/: __main__.py
app/adapters/: cli_parser.py  cli_writer.py
app/application/ports/: parser.py  writer.py
app/application/use_cases/: build_project_structure.py  write_project_structure.py
app/domain/entities/: file.py  folder.py  project_structure.py
app/presentation/cli/: cli.py  controller.py  view.py
tests/: conftest.py
tests/domain/: test_file.py  test_folder.py  test_project_structure.py
