[project]
name = "builder-ric"
version = "1.0.0a1"
description = "CLI to generate project structures."
authors = [{ name = "Eric", email = "ericdaria16@gmail.com" }]
readme = "README.md"
keywords = ["cli", "project-generator", "scaffold"]
requires-python = ">=3.10.7"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",  # 1=Planning, 2=Pre-Alpha, 3=Alpha, 4=Beta, 5=Production
    "Programming Language :: Python :: 3",
]

[project.scripts]
ric = "app.presentation.cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "build==1.2.2.post1",
  "twine==6.1.0"
]

[project.license]
text = "MIT"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]